# travel-bot

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  bot.py  config.py  database.py  pyproject.toml  send_dev_setup.py  send_flight_info.py  send_guide.py
cogs/: ask.py  browse.py  budget.py  daily_tips.py  dashboard.py  flights.py  hotels.py  listener.py  menu.py  packing.py  planner.py  research.py  setup.py  travel_info.py  web_sync.py  web_write.py
services/: amadeus_client.py  claude_service.py  price_monitor.py  research_service.py  serpapi_client.py  web_client.py
